--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.application.name=hos-user-service
-#server.port=9091
+spring.application.name=hos-user-service
+server.port=9091
 #spring.datasource.url=jdbc:h2:mem:TEST;MVCC=true;DB_CLOSE_DELAY=-1;MODE=Oracle
 #spring.datasource.url=jdbc:h2:mem:TEST
 spring.datasource.url = jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
